tests/negative/comptime/if_reduce_let_false_unit.orng
fn main() -> Int { 
    _ = if let x = 4 ; false { } else { }
    322
} 
